crates/rune/tests/snapshots/verilog_golden__add8.snap
---
source: crates/rune/tests/verilog_golden.rs
expression: "verilog::emit(&compile(src))"
---
// Generated by the Rune Verilog backend (synthesizable subset only).
// Semantics match the Rune interpreter bit-for-bit.

module add8 (
    input [7:0] a,
    input [7:0] b,
    output [7:0] out
);
    wire [7:0] w0 = (a + b);
    assign out = w0;
endmodule
