crates/rune/tests/snapshots/verilog_golden__alu.snap
---
source: crates/rune/tests/verilog_golden.rs
expression: "verilog::emit(&compile(src))"
---
// Generated by the Rune Verilog backend (synthesizable subset only).
// Semantics match the Rune interpreter bit-for-bit.

module alu (
    input [1:0] op,
    input [7:0] a,
    input [7:0] b,
    output [7:0] out
);
    wire [7:0] w0 = (a ^ b);
    wire [7:0] w1 = (a & b);
    wire w2 = (op == 2'd2);
    wire [7:0] w3 = (w2 ? w1 : w0);
    wire [7:0] w4 = (a - b);
    wire w5 = (op == 2'd1);
    wire [7:0] w6 = (w5 ? w4 : w3);
    wire [7:0] w7 = (a + b);
    wire w8 = (op == 2'd0);
    wire [7:0] w9 = (w8 ? w7 : w6);
    assign out = w9;
endmodule
