crates/rune/tests/snapshots/verilog_golden__skips.snap
---
source: crates/rune/tests/verilog_golden.rs
expression: "verilog::emit(&compile(src))"
---
// Generated by the Rune Verilog backend (synthesizable subset only).
// Semantics match the Rune interpreter bit-for-bit.

// skipped `impure`: parameter `a` has type `u32`, which contains non-hardware (machine-integer) types; returns non-hardware type `u32`

module pure (
    input [7:0] a,
    output [7:0] out
);
    wire [7:0] w0 = (a + 8'd1);
    assign out = w0;
endmodule
